--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "atom": ">1.9.0"
   },
   "dependencies": {
+    "duotone-syntax": "2.0.0",
     "chroma-js": "1.1.1"
   },
   "configSchema": {
